--- a/v2_net45/v2_net45.csproj
+++ b/v2_net45/v2_net45.csproj
@@ -53,7 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests.cs" />
+    <Compile Include="BasicTests.cs" />
+    <Compile Include="FixtureFailureTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
