--- a/v1_net20/v1_net20.csproj
+++ b/v1_net20/v1_net20.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>v1_net20</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>5e275ac4</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
