--- a/v2_WPA81/packages.config
+++ b/v2_WPA81/packages.config
@@ -4,5 +4,5 @@
   <package id="xunit.abstractions" version="99.99.99" targetFramework="wpa81" />
   <package id="xunit.assert" version="99.99.99" targetFramework="wpa81" />
   <package id="xunit.core" version="99.99.99" targetFramework="wpa81" />
-  <package id="xunit.runner.visualstudio" version="0.99.8" targetFramework="wpa81" />
+  <package id="xunit.runner.visualstudio.wpa81" version="0.99.9" targetFramework="wpa81" />
 </packages>
