--- a/v2_WPA81/v2_WPA81.csproj
+++ b/v2_WPA81/v2_WPA81.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.props" Condition="Exists('..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.props')" />
-  <Import Project="..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.props" Condition="Exists('..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.props')" />
+  <Import Project="..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.props" Condition="Exists('..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -20,7 +20,7 @@
     <AppxBundle>Never</AppxBundle>
     <IsTargetingWindowsPhonePlatform>true</IsTargetingWindowsPhonePlatform>
     <AllowCrossPlatformRetargeting>False</AllowCrossPlatformRetargeting>
-    <NuGetPackageImportStamp>5d0e67d4</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>5d762a7d</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup>
     <AppXPackage>True</AppXPackage>
@@ -97,16 +97,13 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="xunit.abstractions">
       <HintPath>..\packages\xunit.abstractions.99.99.99\lib\portable-net45+win+wpa81+wp80+monotouch+monoandroid\xunit.abstractions.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.assert, Version=99.99.99.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="xunit.assert">
       <HintPath>..\packages\xunit.assert.99.99.99\lib\portable-net45+win+wpa81+wp80+monoandroid+monotouch10\xunit.assert.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.core, Version=99.99.99.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="xunit.core">
       <HintPath>..\packages\xunit.core.99.99.99\lib\portable-net45+win+wpa81+wp80+monotouch+monoandroid\xunit.core.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -121,12 +118,12 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.props'))" />
-    <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.targets'))" />
+    <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.props'))" />
+    <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.targets'))" />
     <Error Condition="!Exists('..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.props'))" />
     <Error Condition="!Exists('..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.targets'))" />
   </Target>
-  <Import Project="..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.targets" Condition="Exists('..\packages\xunit.runner.visualstudio.0.99.8\build\wpa81\xunit.runner.visualstudio.targets')" />
+  <Import Project="..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.targets" Condition="Exists('..\packages\xunit.runner.visualstudio.wpa81.0.99.9\build\wpa81\xunit.runner.visualstudio.wpa81.targets')" />
   <Import Project="..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.targets" Condition="Exists('..\packages\xunit.core.99.99.99\build\wpa81\xunit.core.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
