Added integration test for device runner

--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="xUnit: Xamarin Runner" value="https://www.myget.org/F/xunit-xamarin/" />
     <add key="Local builds: xunit" value="..\xunit" />
     <add key="Local builds: visualstudio.xunit" value="..\visualstudio.xunit" />
   </packageSources>
