--- a/v1_net20/packages.config
+++ b/v1_net20/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net20" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net20" />
-  <package id="xunit.runner.visualstudio" version="0.99.9" targetFramework="net20" />
+  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="net20" />
 </packages>
