--- a/v2_PCL/packages.config
+++ b/v2_PCL/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="xunit" version="99.99.99" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
-  <package id="xunit.abstractions" version="99.99.99" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
-  <package id="xunit.assert" version="99.99.99" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
-  <package id="xunit.core" version="99.99.99" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
+  <package id="xunit" version="2.0.0-beta5-build2785" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
+  <package id="xunit.abstractions" version="2.0.0-beta5-build2785" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
+  <package id="xunit.assert" version="2.0.0-beta5-build2785" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
+  <package id="xunit.core" version="2.0.0-beta5-build2785" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
+  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="portable-net45+win+MonoAndroid10+MonoTouch10" />
 </packages>
