Update to latest build.

--- a/nuget.config
+++ b/nuget.config
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="NuGet.org" value="https://nuget.org/api/v2/" />
     <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/" />
     <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/" />
+    <!--
     <add key="Local builds (xunit)" value="..\xunit" />
     <add key="Local builds (visualstudio.xunit)" value="..\visualstudio.xunit" />
+    -->
   </packageSources>
   <disabledPackageSources />
   <activePackageSource>
