--- a/v2_aspnet5/project.json
+++ b/v2_aspnet5/project.json
@@ -1,10 +1,11 @@
 ﻿{
-    "version": "1.0.0-*",
     "dependencies": {
-        "xunit": "2.0.0-*",
-        "xunit.runner.aspnet": "2.0.0-*"
+        "xunit": "2.0.0-rc1-*",
+        "xunit.runner.aspnet": "2.0.0-rc1-*"
     },
-
+    "commands": {
+        "test": "xunit.runner.aspnet"
+    },
     "frameworks": {
         "aspnet50": {
             "frameworkAssemblies": {
@@ -13,12 +14,8 @@
         },
         "aspnetcore50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-beta-22231"
+                "System.Runtime": "4.0.20-beta-22416"
             }
         }
-    },
-
-    "commands": {
-        "test": "xunit.runner.aspnet"
     }
 }
