Add samples of xunit/visualstudio.xunit#52 and xunit/visualstudio.xunit#67

--- a/v2_net45/v2_net45.csproj
+++ b/v2_net45/v2_net45.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicTests.cs" />
+    <Compile Include="DeserializationFailureTests.cs" />
     <Compile Include="FixtureFailureTests.cs" />
   </ItemGroup>
   <ItemGroup>
