--- a/Devices.UWP/project.json
+++ b/Devices.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "xunit.runner.devices": "1.2.0-rc3-build1085"
   },
   "frameworks": {
     "uap10.0": {}
