Rename to xunit.integration.sln

--- a/v2x_UWP/v2x_UWP.csproj
+++ b/v2x_UWP/v2x_UWP.csproj
@@ -19,6 +19,7 @@
     <PackageCertificateKeyFile>v2x_UWP_TemporaryKey.pfx</PackageCertificateKeyFile>
     <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">14.0</UnitTestPlatformVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
+    <PackageCertificateThumbprint>7B87D23E2802DC8AE9A9AF09E4CE6C1B083DEEDC</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
