--- a/v2x_dnx/project.json
+++ b/v2x_dnx/project.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "xunit": "2.1.0-rc1-*",
+        "xunit": "2.1.0-rc1-build3141",
         "xunit.runner.dnx": "2.1.0-beta5-*"
     },
     "commands": {
