--- a/Devices.UWP.OnlyPCL/Devices.UWP.OnlyPCL.csproj
+++ b/Devices.UWP.OnlyPCL/Devices.UWP.OnlyPCL.csproj
@@ -137,4 +137,13 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="DebugFilesFilesOutputGroupCustom" BeforeTargets="AssignTargetPaths" Condition="'@(_ReferenceRelatedPaths)' != ''" DependsOnTargets="ResolveReferences">
+    <!-- This item represents dependent pdb file's -->
+    <ItemGroup>
+      <Content Include="@(_ReferenceRelatedPaths->'%(FullPath)')" Condition="'%(Extension)' == '.pdb'">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <Visible>False</Visible>
+      </Content>
+    </ItemGroup>
+  </Target>
 </Project>
