Update to 2.2 RTM

--- a/v1_net20/packages.config
+++ b/v1_net20/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net2" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net2" />
-  <package id="xunit.runner.visualstudio" version="2.2.0-rc5-build1272" targetFramework="net20" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net20" developmentDependency="true" />
 </packages>
