--- a/v2x_net452_DotNetSdk/v2x_net452_DotNetSdk.csproj
+++ b/v2x_net452_DotNetSdk/v2x_net452_DotNetSdk.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170217-05" />
-    <PackageReference Include="xunit" Version="2.2.0-rc5-build3544" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-rc5-build1272" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
