--- a/v2x_netcoreapp1.1/v2x_netcoreapp1.1.csproj
+++ b/v2x_netcoreapp1.1/v2x_netcoreapp1.1.csproj
@@ -12,8 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="xunit" Version="2.3.0-beta1-build3630" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta1-build1303" />
+    <PackageReference Include="xunit" Version="2.3.0-beta1-build3633" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta1-build1305" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta1-build3633" />
   </ItemGroup>
 
   <ItemGroup>
